--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 eureka.instance.prefer-ip-address=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=${SERVICE_REGISTRY_URL:http://localhost:8761/eureka}
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 management.endpoints.web.exposure.include=*
