--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,6 @@ eureka.client.serviceUrl.defaultZone=${SERVICE_REGISTRY_URL:http://localhost:876
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:oracle:thin:@//testdb.cvoga0y0wpt0.eu-north-1.rds.amazonaws.com:1521/ORCL
-spring.datasource.username=admin
-spring.datasource.password=sdas123117
+#spring.datasource.url=jdbc:oracle:thin:@//testdb.cvoga0y0wpt0.eu-north-1.rds.amazonaws.com:1521/ORCL
+#spring.datasource.username=admin
+#spring.datasource.password=sdas123117
